[package]
name = "adblock-rust-server"
description = "Server wrapper around the adblock crate using Unix domain sockets"
version = "0.1.0"
authors = ["Aapelix <hello@aapelix.dev>"]
edition = "2021"
repository = "https://github.com/aapelix/adblock-rust-server"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.adblock]
version = "0.9.0"
default-features = false
features = ["embedded-domain-resolver", "full-regex-handling"]

[dependencies.attohttpc]
version = "0.28.0"
